# unity-mcp

./: .gitignore  COMPONENT_INSPECTION_GUIDE.md  README-zh.md  README.md  UNITY_MCP_TOOLS_REFERENCE.md  deploy-dev.bat  mcp_source.py  prune_tool_results.py  pytest.ini  restore-dev.bat  test_unity_socket_framing.py
MCPForUnity/UnityMcpServer~/src/: Dockerfile  config.py  models.py  port_discovery.py  pyproject.toml  server.py  telemetry.py  telemetry_decorator.py  unity_connection.py
MCPForUnity/UnityMcpServer~/src/resources/: __init__.py  editor_state.py  menu_items.py  prefab_stage.py  selection.py  tests.py  unity_instances.py
MCPForUnity/UnityMcpServer~/src/tools/: __init__.py  execute_menu_item.py  manage_asset.py  manage_editor.py  manage_gameobject.py  manage_prefabs.py  manage_scene.py  manage_script.py  manage_shader.py  read_console.py  resource_tools.py  run_tests.py  script_apply_edits.py
Server/: Dockerfile  README.md  port_discovery.py  pyproject.toml  server.py  test_telemetry.py  unity_instance_middleware.py
Server/registry/: __init__.py  tool_registry.py
Server/resources/: __init__.py  active_tool.py  layers.py  menu_items.py  project_info.py  tags.py  unity_instances.py  windows.py
Server/src/: main.py
Server/src/core/: config.py  telemetry.py
Server/src/models/: __init__.py  unity_response.py
Server/src/services/: custom_tool_service.py
Server/src/services/resources/: __init__.py  active_tool.py  custom_tools.py  editor_state.py  layers.py  menu_items.py  prefab_stage.py  project_info.py  selection.py  tags.py  tests.py  (+2 more)
Server/src/transport/: models.py  plugin_hub.py  plugin_registry.py  unity_instance_middleware.py  unity_transport.py
Server/tests/integration/: conftest.py  test_domain_reload_resilience.py  test_edit_normalization_and_noop.py  test_edit_strict_and_warnings.py  test_get_sha.py  test_helpers.py  test_instance_routing_comprehensive.py  test_instance_targeting_resolution.py  test_logging_stdout.py  test_manage_asset_json_parsing.py  test_manage_asset_param_coercion.py  test_manage_gameobject_param_coercion.py  test_manage_script_uri.py  test_read_console_truncate.py  test_resources_api.py  test_script_tools.py  test_telemetry_queue_worker.py  test_telemetry_subaction.py  test_transport_framing.py  test_validate_script_summary.py
Server/tools/: __init__.py  debug_request_context.py  execute_menu_item.py  manage_editor.py  manage_gameobject.py  manage_script.py  read_console.py  run_tests.py  set_active_instance.py
(+266 files in other folders)
