[project]
name = "MCPForUnityServer"
version = "8.1.5"
description = "MCP for Unity Server: A Unity package for Unity Editor integration via the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "httpx>=0.27.2",
 "fastmcp>=2.13.0,<2.13.2",
 "mcp>=1.16.0",
 "pydantic>=2.12.0",
 "tomli>=2.3.0",
 "fastapi>=0.104.0",
 "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-for-unity = "main:main"

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"
