[project]
name = "MCPForUnityServer"
version = "6.3.0"
description = "MCP for Unity Server: A Unity package for Unity Editor integration via the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "httpx>=0.27.2",
 "fastmcp>=2.12.5",
 "mcp>=1.16.0",
 "pydantic>=2.12.0",
 "tomli>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-for-unity = "server:main"

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "config",
    "models",
    "module_discovery",
    "port_discovery",
    "reload_sentinel",
    "server",
    "telemetry",
    "telemetry_decorator",
    "unity_connection"
]
packages = ["tools", "resources", "registry"]
